Wed May  9 20:16:05 UTC 2012  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/transport/udp/UdpDataLink.h:
        * dds/DCPS/transport/udp/UdpDataLink.cpp:
        * dds/DCPS/transport/udp/UdpTransport.h:
        * dds/DCPS/transport/udp/UdpTransport.cpp:

          Add support for setting the diffserv codepoint when
          Transport Priority QoS is usedi with the udp transport.

        * tests/DCPS/Priority/Publisher.cpp:
        * tests/DCPS/Priority/run_test.pl:

          Modify this test so that the UDP configuration actually works.

Tue Apr 24 02:31:09 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/DCPSInfoRepo/pubsub.cpp:

          Removed unused parameter.

Mon Apr 23 21:23:34 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/DataWriterCallbacks.h:

          Added interface for Discovery callbacks into the DataWriter, to
          refactor out dependencies on DataWriterRemote.

        * dds/DdsDcps.mpc:

          Removed dds/DdsDcpsDataWriterRemote.idl.

        * dds/DCPS/InfoRepoDiscovery/InfoRepoDiscovery.mpc:
        * dds/DCPS/InfoRepoDiscovery/DataWriterRemote.idl:

          Moved dds/DdsDcpsDataWriterRemote.idl into InfoRepoDiscovery.

        * dds/DdsDcpsInfoUtils.idl:

          Moved non-InfoRepoDiscovery dependencies from dds/DdsDcpsDataWriterRemote.idl.

        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:

          Added inheritance from DataWriterCallbacks and removed all associations to
          DataWriterRemote.

        * dds/DCPS/InfoRepoDiscovery/DataWriterRemoteImpl.h:
        * dds/DCPS/InfoRepoDiscovery/DataWriterRemoteImpl.cpp:

          Changed parent from DataWriterImpl to DataWriterCallbacks and moved
          files into InfoRepoDiscovery.

        * dds/DCPS/Discovery.h:
        * dds/DCPS/RTPS/RtpsDiscovery.h:
        * dds/DCPS/RTPS/RtpsDiscovery.cpp:
        * dds/DCPS/RTPS/Spdp.h:
        * dds/DCPS/RTPS/Spdp.cpp:
