@@ -1,3 +1,12 @@
+Sun May 13 18:37:35 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * dds/DCPS/GuidUtils.h:
+          Inline methods shouldn't be exported, resolves MinGW warnings on
+          windows
+
+        * dds/DCPS/Service_Participant.cpp:
+          Fixed windows MinGW warning
+
 Wed May  9 20:16:05 UTC 2012  Paul Calabrese  <calabrese_p@ociweb.com>
 
         * dds/DCPS/transport/udp/UdpDataLink.h:
@@ -6,7 +15,7 @@ Wed May  9 20:16:05 UTC 2012  Paul Calabrese  <calabrese_p@ociweb.com>
         * dds/DCPS/transport/udp/UdpTransport.cpp:
 
           Add support for setting the diffserv codepoint when
-          Transport Priority QoS is usedi with the udp transport.
+          Transport Priority QoS is used with the udp transport.
 
         * tests/DCPS/Priority/Publisher.cpp:
         * tests/DCPS/Priority/run_test.pl:
